@@ -25,6 +25,8 @@ Miscellaneous:
 * bug 963: New option document.css.ignore_display_none.
 * bug 977: Fixed crash when opening in new tab a non link with onclick
   attribute.
+* bug 983: Give preference to the Content-Type specified in the HTTP
+  header over that specified via the HTML meta tag.
 * bug 1008: File upload fields in HTML forms now stream the files to
   the server, instead of reading them to memory in advance.  This lets
   you upload larger files.  The downsides are that ELinks may use a
